--- a/packages.tex
+++ b/packages.tex
@@ -20,6 +20,9 @@
 \usepackage{tcolorbox}
 \usepackage{multicol}
 \usepackage{tikz}
+\usetikzlibrary{arrows.meta}
+\usetikzlibrary{bending}
+
 
 %code
 %\usepackage{minted}
